--- a/package.json
+++ b/package.json
@@ -6,18 +6,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.6.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.2"
+    "react-redux": "7.2.5",
+    "redux": "4.1.1",
+    "redux-injectors": "1.3.0",
+    "redux-saga": "1.1.3",
+    "sass": "1.43.2"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
-    "eslint": "^8.0.1",
+    "@types/shelljs": "0.8.9",
+    "cross-env": "7.0.3",
     "eslint-config-next": "11.1.2",
+    "eslint": "8.0.1",
+    "inquirer": "7.3.3",
+    "inquirer-directory": "^2.2.0",
+    "node-plop": "0.26.2",
+    "plop": "2.7.4",
+    "shelljs": "0.8.4",
+    "ts-node": "10.3.0",
     "typescript": "4.4.4"
   }
 }
