--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettify": "prettier --write",
     "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts"
   },
   "dependencies": {
@@ -23,13 +24,17 @@
   "devDependencies": {
     "@types/react": "17.0.30",
     "@types/shelljs": "0.8.9",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "cross-env": "7.0.3",
+    "eslint": "^8.0.1",
     "eslint-config-next": "11.1.2",
-    "eslint": "8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
     "inquirer": "7.3.3",
     "inquirer-directory": "^2.2.0",
     "node-plop": "0.26.2",
     "plop": "2.7.4",
+    "prettier": "^2.4.1",
     "shelljs": "0.8.4",
     "ts-node": "10.3.0",
     "typescript": "4.4.4"
